# armbot_firmware

./: README.md
stm32_blink/: Cargo.toml  memory.x  openocd.cfg
stm32_blink/.cargo/: config.toml
stm32_blink/src/: main.rs
