[package]
name = "stm32_blink"
version = "0.1.0"
edition = "2021"


[dependencies]
# provides startup code for the ARM CPU
cortex-m-rt = "0.7.2"
# provides access to low level ARM CPU registers (used for delay)
cortex-m = "0.7.7"
# provies a panic-handler (halting cpu)
# (required when not using stdlib)
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m-semihosting = "0.3.3"
fugit = "0.3.7"

[dependencies.stm32f4xx-hal]
version = "0.13.1"
features = ["rt", "stm32f411"] # replace the model of your microcontroller here



[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice, and they don't increase the size on Flash
lto = true # better optimizations
